# parRSB.py

./: .gitignore  CMakeLists.txt  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
src/: parrsb.pxd  parrsb.pyx  parrsb_wrapper.pyx
tests/: 00_conn_mesh.py
