[project]
version = "0.0.1"
name = "parrsb.py"
description = ""
dependencies = [
    "cython>=0.29.24",
    "setuptools",
    "numpy",
    "mpi4py",
]
license = "MIT"
readme = "README.md"
authors = [
    { name = "Thilina Ratnayaka", email = "thilinarmtb@gmail.com" },
]
requires-python = ">=3.10"

[tool.ruff]
preview = true
line-length = 80

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.isort]
combine-as-imports = true

[dependency-groups]
dev = [
    "ruff>=0.13.2",
    "pytest",
]
