[build-system]
requires = ["scikit-build-core", "cython", "cython-cmake", "numpy", "mpi4py"]
build-backend = "scikit_build_core.build"

[project]
version = "0.0.1"
name = "parrsb"
description = ""
license = "MIT"
readme = "README.md"
authors = [
    { name = "Thilina Ratnayaka", email = "thilinarmtb@gmail.com" },
]
requires-python = ">=3.10"

[tool.ruff]
preview = true
line-length = 80

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.isort]
combine-as-imports = true

[dependency-groups]
dev = [
    "mpi4py>=4.1.1",
    "numpy>=2.2.6",
]
